syntax = "proto3";

package protobuf;

option go_package = "protoc";

message Event {
	int64 event_id = 1;
	map<string, string> headers = 2;
	repeated Action actions= 4;
}

message Action { 
	int64 action_id = 1;

	int64 next_action = 2;
	int64 previous_action = 3;


	int64 service_id = 4;
	int64 endpoint_id = 5;

	bool	done = 6;
	repeated string	signed_authority = 7;

	Result result = 9;
}

message Result { 
	string error = 3;
    map<string, string> data= 4;
}